Adding security, register and login

--- a/course-management/src/main/resources/application.properties
+++ b/course-management/src/main/resources/application.properties
@@ -3,6 +3,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/course_manage
 spring.datasource.username=root
 spring.datasource.password=admin
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
 
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
